@@ -12,6 +12,7 @@ FIXES
 * jsonquery.html doesn't display scheduled_time_ok correctly (John Frickson)
 * daemon_dumps_core=1 has no effect on Linux when Nagios started as root (John Frickson)
 * Configuration check in hostgroup - misspelled hostname does not error (John Frickson)
+* contacts or contact_groups directive with no value should not be allowed (John Frickson)
 
 
 4.2.2 - 2016-10-xx
